--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://pabpol.github.io/Sprint_final_M8/client",
+  "homepage": "http://pabpol.github.io/Sprint_final_M8",
   "name": "client",
   "version": "0.1.0",
   "private": true,
